src/style.css
:root {
  --pixel-size: 10;
  --parallax-speed: 20s;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.game_container {
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  perspective: 100px;
  transform-style: preserve-3d;
  position: relative;
}

.parallax_layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-size: cover;
  background-repeat: repeat-x;
}

.parallax_animate {
  animation-name: scrollBackground;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.bg3 {
  background-image: url('../assets/autumn_forest_2d_pixel_art/Background/3.png');
  transform: translateZ(-9px) scale(2.5);
  background-repeat: repeat-x;
  z-index: 1;
  animation-duration: calc(var(--parallax-speed) * 5);
}

.bg2 {
  background-image: url('../assets/autumn_forest_2d_pixel_art/Background/2.png');
  background-repeat: repeat-x;
  transform: translateZ(-6px) scale(2.0);
  z-index: 2;
  animation-duration: calc(var(--parallax-speed) * 3);
}

.bg1 {
  background-image: url('../assets/autumn_forest_2d_pixel_art/Background/1.png');
  background-repeat: repeat-x;
  transform: translateZ(-3px) scale(1.5);
  z-index: 3;
  animation-duration: calc(var(--parallax-speed) * 2);
}

.character {
  width: calc(32px * var(--pixel-size));
  height: calc(32px * var(--pixel-size));
  overflow: hidden;
  position: absolute;
  bottom: 128px;
  z-index: 5;
}

.run_spritesheet {
  animation: moveSpriteSheet 1s steps(16) infinite;
  width: calc(610px * var(--pixel-size));
}

.pixelart {
  image-rendering: pixelated;
}

.ground_grass {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 128px;
  background-image: url('../assets/autumn_forest_2d_pixel_art/Tileset/grass_single.png');
  background-size: 128px;
  background-repeat: repeat-x;
  z-index: 10;
  transform: translateZ(0);
  animation: scrollGround 0.5s linear infinite;
}

@keyframes moveSpriteSheet {
  from {
    transform: translate3d(0px, 0, 0);
  }

  to {
    transform: translate3d(-100%, 0, 0);
  }
}

@keyframes scrollBackground {
  from {
    background-position: 0 0;
  }

  to {
    background-position: -10000px 0;
  }
}

@keyframes scrollGround {
  from {
    background-position: 0 0;
  }

  to {
    background-position: -256px 0;
  }
}

